# ac-service-tracker-mvp

./: .env.example  README.md  docker-compose.yml  pyproject.toml
data_generator/: 3_data_analyst.ipynb  data_analyst.ipynb  generator.ipynb  get_data.ipynb
data_generator/excel/: data.xlsx
data_generator/json/: client_equipment.json  clients.json  equipment_failures.json  failure_types.json  inspections.json  maintenance_order.json  maintenance_types.json  users.json
mtto_tracker/: manage.py
mtto_tracker/ac_service_tracker/: admin.py  apps.py  models.py  signals.py
mtto_tracker/ac_service_tracker/migrations/: 0001_initial.py  0002_delete_authgroup_delete_authgrouppermissions_and_more.py
mtto_tracker/choices/: choices.py
mtto_tracker/mtto_tracker/: asgi.py  settings.py  urls.py  wsgi.py
sql/: db.sql  readme.md
sql/prompts/: inserts_en.txt  inserts_es.txt
sql/scripts/: query.sql  update.sql
sql/scripts/scripts_v_2/: query.sql
sql/version_1/: db.mkd  db_1_tables.sql  db_2_insertions.sql  db_v_1.sql
sql/version_2_django/: db_1_tables.sql  db_2_insertions.sql
