[project]
name = "mtto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-extensions>=4.1",
    "django==6.0",
    "matplotlib>=3.10.8",
    "openai>=2.8.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pylance>=0.39.0",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "psycopg2>=2.9.11",
    "django-jazzmin>=3.0.1",
]
